add config file

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Run link check
         uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
+          base-branch: main
           use-quiet-mode: 'no'
           use-verbose-mode: 'yes'
           check-modified-files-only: 'yes'
+          config-file: '.github/workflows/markdown.links.config.json'
